ocp_templates/deploymentConfig.yml
kind: DeploymentConfig
apiVersion: apps.openshift.io/v1
metadata:
  name: rusty-async-fibber
  namespace: yournamespace
spec:
  strategy:
    type: Rolling
  triggers:
    - type: ConfigChange
    - type: ImageChange
      imageChangeParams:
        automatic: true
        containerNames:
          - rusty-async-fibber
        from:
          kind: ImageStreamTag
          namespace: yournamespace
          name: 'rusty-async-fibber:latest'
  replicas: 1
  revisionHistoryLimit: 10
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: rusty-async-fibber
    spec:
      containers:
        - name: rusty-async-fibber
          image: >-
            image-registry.openshift-image-registry.svc:5000/yournamespace/rusty-async-fibber
          imagePullPolicy: Always
