ocp_templates/service.yml
apiVersion: v1
kind: Service
metadata:
  name: rusty-async-fibber
  namespace: oasis
spec:
  selector:
    app: rusty-async-fibber
  ports:
    - protocol: TCP
      port: 1234
      targetPort: 1234
