ocp_templates/route.yml
kind: Route
apiVersion: route.openshift.io/v1
metadata:
  name: rusty-async-fibber
  namespace: yournamespace
spec:
  to:
    kind: Service
    name: rusty-async-fibber
  port:
    targetPort: fibber-http
